styles.css
html {
  box-sizing: border-box;
  font-size: 62.5%;
  font-family: 'Roboto', sans-serif;
  scroll-behavior: smooth;
}
*,
*:before,
*:after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}
:root {
  --orange: rgb(252, 108, 17);
  --orange-hover: rgba(252, 108, 17, 0.9);
}

body {
  height: 100vh;
  background-image: url('/assets/octo-mimi.jpeg ');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
h1 {
  font-family: 'Raleway', sans-serif;
  font-size: 4rem;
  font-weight: 400;
}
p {
  font-size: 1.5rem;
  line-height: 1.5;
}
p > a:link {
  color: var(--orange);
}

header {
  height: 100vh;
  background: rgba(0, 0, 0, 0.5);
  display: flex;
  flex-direction: column;
  color: var(--orange);
}
nav {
  width: 100%;
  padding: 1rem 3rem;
}
.wrapper {
  display: flex;
  padding: 1rem 0;
  margin-top: 1rem;
  border-bottom: 2px solid var(--orange);
}

/* burger menu */

.shadow-wrapper {
  position: fixed;
  /* top: 0; */
  /* left: 0; */
  filter: drop-shadow(1px 1px 10px grey);
  z-index: 2;
}

.burger-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  height: 100px;
  width: 100px;
  clip-path: circle(90% at 0 0);
  background: var(--orange);
  display: flex;
  justify-content: flex-start;
  padding: 1rem;
  display: none;
}
.hamburger {
  margin-top: 2rem;
  position: relative;
  background: white;
  width: 60%;
  height: 3px;
  border-radius: 10px;
  transition: all 0.3s;
}
.hamburger:before,
.hamburger:after {
  content: '';
  top: 10px;
  position: absolute;
  background: white;
  width: 100%;
  height: 3px;
  border-radius: 10px;
}
.hamburger:after {
  top: -10px;
}
/* .hamburger-scrolled {
  clip-path: circle(80%);
  border-radius: 50%;
  transform: scale(2);
} */
.toggle-menu {
}
.toggle-menu > .hamburger {
  transform: rotate(135deg);
  /* background: var(--orange); */
}
.toggle-menu > .hamburger::after,
.toggle-menu > .hamburger::before {
  top: 0;
  transform: rotate(90deg);
  /* background: var(--orange); */
}

/* mobile menu */

.menu {
  height: 100vh;
  width: 100%;
  background: rgba(255, 255, 255);
  position: fixed;
  font-size: 2rem;
  display: flex;
  flex-grow: 1;
  justify-content: center;
  align-items: center;
  transform-origin: center;
  transition: all 0.4s cubic-bezier(0.9, 0.41, 0.3, 1.38);
  transform: translateX(-100%);
  border-radius: 50%;
}
.menu > ul {
  list-style: none;
}
.menu li {
  padding: 2rem 0;
}
.menu a {
  text-decoration: none;
  color: var(--orange);
  border-bottom: 2px solid transparent;
  transition: all 0.4s;
  transform-origin: left;
}
.menu a:hover {
  border-bottom: 2px solid var(--orange);
}
.toggle-menu ~ .menu {
  transform: translateX(0) scale(2);
}
/* end mobile menu */

.nav {
  display: flex;
  width: 100%;
  align-items: baseline;
  justify-content: flex-end;
  font-size: 2rem;
  list-style: none;
}
.nav li {
  padding: 0 2rem;
}
.nav a {
  text-decoration: none;
  color: var(--orange);
  border-bottom: 2px solid transparent;
  transition: all 0.4s;
}
.nav a:hover {
  color: white;
  border-bottom: 2px solid white;
}
.header-content {
  font-family: 'Raleway', sans-serif;
  padding: 3rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
}
.name {
  font-size: clamp(6rem, 10vw, 15rem);
  font-weight: 600;
  border-bottom: 3px solid transparent;
  border-top: 3px solid transparent;
  transition: all 0.3s;
}

.title {
  text-transform: uppercase;
  font-size: clamp(3rem, 6vw, 10rem);
  font-weight: 500;
  font-style: italic;
}

.content {
  display: flex;
  flex-wrap: wrap;
}
.content > * {
  flex: 1 1 30rem;
}
.about-title {
  text-align: center;
  flex-basis: 100%;
  background: #e9ebeb;
  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
  padding: 2rem;
  font-weight: 300;
}
.jef-img {
  background: #e9ebeb;
}
.jef {
  width: 100%;
}

.info {
  background: #e9ebeb;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 5rem;
}
.contact {
  width: 30rem;
  margin-top: 3rem;
  border: none;
  background: var(--orange);
  color: white;
  padding: 2rem;
  border-radius: 45px;
  font-size: 2rem;
  box-shadow: 0px 2px 8px 2px grey;
  transition: all 0.2s;
  cursor: pointer;
  text-decoration: none;
  text-align: center;
}
.contact:hover {
  box-shadow: 0px 8px 12px 3px grey;
  transform: translateY(-6px);
  background: var(--orange-hover);
}

.contact:active {
  box-shadow: 0px 4px 8px 2px grey;
  transform: translateY(-4px);
  background: var(--orange);
}
.services {
  width: 100%;
  display: grid;
  place-items: center;
  margin: 2rem;
}
h2 {
  font-size: 4rem;
  padding: 3rem 0;
}
.cards {
  width: 80%;
  display: flex;
  flex-wrap: wrap;
  gap: 3rem;
  /* margin: 2rem; */
}
.card {
  font-size: 1rem;
  position: relative;
  flex: 1 1 30rem;
  height: 400px;
  border-radius: 15px;
  padding: 3rem;
  transition: all 0.4s;
  border: 2px solid var(--orange);

  box-shadow: inset 0 0 1em var(--orange);
}

.card > p {
  padding-top: 3rem;
}
footer {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 10rem;
  padding: 4rem;
}
footer > * {
  padding: 0 2rem;
}
@media screen and (max-width: 800px) {
  .burger-wrapper {
    display: flex;
  }
  .wrapper {
    display: none;
  }
}

